# cargo-play

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
extension/: DEVELOPMENT.md  README.md  cargo-play-0.0.1.vsix  package-lock.json  package.json
extension/src/: extension.ts
fixtures/: args.rs  bitflags.rs  dtoa.rs  edition.rs  hello.rs  infer-failure.rs  infer-override.rs  infer.rs  mod_hello.rs  tests.rs
fixtures/multi/: entry.rs
fixtures/subdirs/world/: mod.rs
fixtures/version/: version.rs
src/: cargo.rs  errors.rs  infer.rs  lib.rs  main.rs  opt.rs  options.rs  steps.rs
tests/: integration_test.rs
tests/multi/: hello.rs
tests/simple/: simple.rs
tests/subdirs/: hello.rs
