[package]
name = "cargo-play"
version = "0.4.1"
authors = ["Zeyi Fan <cargo@zeyi.fan>"]
edition = "2018"
description = "Run your Rust code without setting up Cargo"
license = "MIT"
homepage = "https://github.com/fanzeyi/cargo-play"
readme = "README.md"
categories = ["development-tools::build-utils", "development-tools::cargo-plugins"]

[dependencies]
structopt = "0.2"
failure = "0.1"
toml = "0.5"
sha1 = "0.6"
bs58 = "0.3.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
pathdiff = "0.1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
rand = "0.7.0"
