[package]
name = "cargo-play"
version = "0.4.2"
authors = ["Zeyi Fan <cargo@zeyi.fan>"]
edition = "2018"
description = "Run your Rust code without setting up Cargo"
license = "MIT"
homepage = "https://github.com/fanzeyi/cargo-play"
readme = "README.md"
categories = ["development-tools::build-utils", "development-tools::cargo-plugins"]

[dependencies]
structopt = "0.3"
failure = "0.1"
toml = "0.5"
sha1 = "0.6"
bs58 = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
pathdiff = "0.2"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
rand = "0.8.3"

[badges]
travis-ci = { repository = "fanzeyi/cargo-play" }
maintenance = { status = "passively-maintained" }
