[package]
name = "cargo-play"
version = "0.5.1"
authors = ["Zeyi Fan <cargo@zeyi.fan>"]
edition = "2018"
description = "Run your Rust code without setting up Cargo"
license = "MIT"
homepage = "https://github.com/fanzeyi/cargo-play"
readme = "README.md"
categories = ["development-tools::build-utils", "development-tools::cargo-plugins"]

[dependencies]
structopt = "0.3.26"
failure = "0.1.8"
toml = "0.5.8"
sha1 = "0.10.1"
bs58 = "0.4.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
pathdiff = "0.2.1"
proc-macro2 = "1.0.36"
syn = { version = "1.0.86", features = ["full"] }
quote = "1.0.15"

[dev-dependencies]
rand = "0.8.5"

[badges]
travis-ci = { repository = "fanzeyi/cargo-play" }
maintenance = { status = "passively-maintained" }
